# PAOO_cmake_tutorial

./: README.md
Proiect/: CMakeLists.txt  LaptopDemo.cxx
Proiect/Device/: CMakeLists.txt
Proiect/Device/include/: Device.h  GamingLaptop.h  Laptop.h  WaffleMaker.h
Proiect/Device/lib/: GamingLaptop.cxx  Laptop.cxx  WaffleMaker.cxx
Proiect/Laptop/: CMakeLists.txt  Laptop.cxx  Laptop.h
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
